fix typos in GLS, Create Failure theories page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -450,7 +450,7 @@ import Searchbar from "./Searchbar.astro";
                         <section class="tile menu white-box col">
                             <h2><a href="/md">Mechanism Design</a></h2>
                             <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
-                                <li><a href="/md/Graphical_Linkage_Sythesis?origin=sidebar">Graphical Linkage Synthesis</a></li>
+                                <li><a href="/md/Graphical_Linkage_Synthesis?origin=sidebar">Graphical Linkage Synthesis</a></li>
 
                             </ol>
                         </section>
@@ -468,7 +468,7 @@ import Searchbar from "./Searchbar.astro";
                             <h2><a href="/mf">Machine Failure</a></h2>
                             <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
                                 <li><a href="/mf/Stress_Concentrations?origin=sidebar">Stress Concentrations</a></li>
-
+                                <li><a href="/mf/Failure_Theories?origin=sidebar">Failure Theories</a></li>
                             </ol>
                         </section>
                     </div>
