--- a/src/pages/mf.astro
+++ b/src/pages/mf.astro
@@ -18,7 +18,7 @@ import "../../public/static/css/course_home_pages.css"
       <!--<li><a href="/mf/Clutches_and_Brakes?origin=coursemenu">Clutches and Brakes</a></li>-->
       <!--<li><a href="/mf/Stress?origin=coursemenu">Stress</a></li>-->
       <li><a href="/mf/Stress_Concentrations?origin=coursemenu">Stress Concentrations</a></li>
-      <!--<li><a href="/mf/Failure_Theories?origin=coursemenu">Failure Theories</a></li>-->
+      <li><a href="/mf/Failure_Theories?origin=coursemenu">Failure Theories</a></li>
       <!--<li><a href="/mf/Fatigue?origin=coursemenu">Fatigue</a></li>-->
       <!--<li><a href="/mf/Threaded_Components?origin=coursemenu">Threaded Components</a></li>-->
       <!--<li><a href="/mf/Buckling?origin=coursemenu">Buckling</a></li>-->
