Change proof of great circles to use pi/2

--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -1634,9 +1634,9 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     Given any two points <InlineEquation equation="A" /> and <InlineEquation equation="B" /> on the surface of the
     Earth, we choose coordinate axes and use <a
     href="#spherical_coordinates">spherical coordinates</a> so that <InlineEquation equation="A" /> is at
-    <InlineEquation equation="(r = r_0, \\theta = 0, \\phi = \\pi - \\phi_0)" /> and <InlineEquation equation="B" /> is at
-    <InlineEquation equation="(r = r_0, \\theta = 0, \\phi = \\pi + \\phi_0)" />. Here <InlineEquation equation="r_0" /> is
-    the radius of the Earth and <InlineEquation equation="0 \\le \\phi_0 \\le \\pi/2" />. The
+    <InlineEquation equation="(r = r_0, \\theta = 0, \\phi = \\frac{\\pi}{2} - \\phi_0)" /> and <InlineEquation equation="B" /> is at
+    <InlineEquation equation="(r = r_0, \\theta = 0, \\phi = \\frac{\\pi}{2} + \\phi_0)" />. Here <InlineEquation equation="r_0" /> is
+    the radius of the Earth and <InlineEquation equation="0 \\le \\phi_0 \\le \\frac{\\pi}{2}" />. The
     total angle between <InlineEquation equation="\\vec{OA}" /> and <InlineEquation equation="\\vec{OB}" /> is <InlineEquation equation="\\Delta\\phi    = 2\\phi_0" />, so the great-circle distance between <InlineEquation equation="A" /> and <InlineEquation equation="B" />
     is <InlineEquation equation="r_0 \\Delta\\phi" />. We will now prove that this is the
     smallest possible distance.
