--- a/src/pages/mf/Failure_Theories.astro
+++ b/src/pages/mf/Failure_Theories.astro
@@ -196,7 +196,8 @@ import Item from "../../components/Item.astro";
     <SubSubSection id="Conclusion" title="Conclusion">
         <p>
             Each failure theory provides unique insights into material behavior. While von Mises theory is best for
-            ductile materials, brittle materials require normal stress theory or fracture mechanics.
+            ductile materials, brittle materials require normal stress theory or fracture mechanics. Altogether, it is
+            the responsibility of an engineer to identify the most appropriate theory and apply it to determine if a component will work as intended. 
         </p>
     </SubSubSection>
 </Layout>
