Fix $\pi$ in `atan2()` note

--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -269,7 +269,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 necessary mean that <InlineEquation equation="\\theta = \\tan^{-1}(y / x)" />, because
                 \(\tan\) is not a one-to-one function. For example,
                 <InlineEquation equation="\\tan^{-1}(1/1)" /> is the same as  <InlineEquation equation="\\tan^{-1}(-1/-1)" />. We
-                thus need to take  <InlineEquation equation="\\theta = \\tan^{-1}(y/x) + \pi" /> if the
+                thus need to take  <InlineEquation equation="\\theta = \\tan^{-1}(y/x) + \\pi" /> if the
                 point is in quadrants II or III.
               </p>
               <p>
