populate Cams reference page

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -452,6 +452,7 @@ import Searchbar from "./Searchbar.astro";
                             <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
                                 <li><a href="/md/Graphical_Linkage_Synthesis?origin=sidebar">Graphical Linkage Synthesis</a></li>
                                 <li><a href="/md/Instant_Centers?origin=sidebar">Instant Centers</a></li>
+                                <li><a href="/md/Cams?origin=sidebar">Cams</a></li>
                             </ol>
                         </section>
                     </div>
