--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -18,7 +18,7 @@ import "../../public/static/css/course_home_pages.css"
       <!--<li><a href="/md/Gears?origin=coursemenu">Gears</a></li>-->
       <li><a href="/md/Graphical_Linkage_Synthesis?origin=coursemenu">Graphical Linkage Synthesis</a></li>
       <li><a href="/md/Instant_Centers?origin=coursemenu">Instant Centers</a></li>
-      <!--<li><a href="/md/Cams?origin=coursemenu">Cams</a></li>-->
+      <li><a href="/md/Cams?origin=coursemenu">Cams</a></li>
       <!--<li><a href="/md/Position_Velocity_Acceleration?origin=coursemenu">Position Velocity Acceleration</a></li>-->
       <!--<li><a href="/md/Dynamic_Force_Analysis?origin=coursemenu">Dynamic Force Analysis</a></li>-->
       <!--<li><a href="/md/Virtual_Work?origin=coursemenu">Virtual Work</a></li>-->
