--- a/src/pages/md/Instant_Centers.astro
+++ b/src/pages/md/Instant_Centers.astro
@@ -171,7 +171,7 @@ import Enumerate from "../../components/Enumerate.astro";
             <Image src="/md/Instant Centers/IC_rule_4.png" width="5"> </Image>
         </SubSubSection>
 
-        <SubSubSection id="r5" title="Rule 5: Rolling Slipping">
+        <SubSubSection id="r5" title="Rule 5: Rolling with Slipping">
 
             <p>
                 For two bodies in rolling contact with slipping, which we can think of as a combination of rolling (IC at contact point) and sliding (IC at infinity). As a result, we can deduce that the IC lies on a line normal to their plane of contact. Additionally, the IC lies on the same line as their common centers of rotation according to Kennedy's theorem. The third body can be thought of as the ground link, hence the pivots are two instant centers.
