--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -57,14 +57,10 @@ Force X distance [lb-in or N-m]
 <SubSection title="Notation and Convention" id="notation_and_convention">
 
 <Image src="/sol/torsion/Convention.png" width="5">  Sign convention </Image>
-
-<BlueText>
  <Itemize>
      <Item><InlineEquation equation="\\phi > 0" /> : counter clockwise </Item>
      <Item><InlineEquation equation="\\phi < 0" /> : clockwise </Item>
  </Itemize>
-</BlueText>
-
 
 <Image src="/sol/torsion/RightHandRule.png" width="4">  Right hand rule </Image>
 
@@ -246,7 +242,7 @@ Gear system problems can be solved using the torsion equations.
 
 <Itemize>
 	<Item>Gears are perfectly rigid. </Item>
-	<Item>The roation axis is perfectly fixed in space. </Item>
+	<Item>The rotation axis is perfectly fixed in space. </Item>
 	<Item>Gear teeth are evenly spaced and perfectly shaped so there is no gap to create lost motion. </Item>
     <Item>Gear tooth faces are perfectly smooth so there is no slip. </Item>
     <Item>Mated gears twist through the same arc length. </Item>
